email message update

--- a/todolist_blog/app/views/comment_mailer/received.html.slim
+++ b/todolist_blog/app/views/comment_mailer/received.html.slim
@@ -1,2 +1,2 @@
-h1 Information
-p = 'Hello '+ @user.nickname + ", you have got comment(received.html)"
+h1 Message
+p = 'Hi '+ @user.nickname + ", your comment is very important to us but not very necessary (joke)"
